--- a/src/content/posts/translations/alexandrian-art-of-rulings-2.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-2.mdx
@@ -14,11 +14,11 @@ translator: Angon
 
 Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
 
-_Оригинал:_ [_Art of Rulings – Part 2: Intention and Method_](http://thealexandrian.net/wordpress/37960/roleplaying-games/art-of-rulings-part-2-intention-and-method)
+Оригинал: [Art of Rulings – Part 2: Intention and Method](http://thealexandrian.net/wordpress/37960/roleplaying-games/art-of-rulings-part-2-intention-and-method)
 
-_Написал_ [_Джастин Александер_](http://thealexandrian.net/about) _в октябре 2015_
+Написал [Джастин Александер](http://thealexandrian.net/about) в октябре 2015
 
-_Перевел Ангон в июне 2018_
+Перевел Ангон в июне 2018
 
 Игрок заявляет: “Я хочу совершить Х”.
 
@@ -40,13 +40,13 @@ _Перевел Ангон в июне 2018_
 
 ![](https://lh4.googleusercontent.com/V3KDete7ZbAufOqljQIurS9b0DcwQCAZwF0pFMBiwQ4DLAQaJYXJfNsPh0WqbkLZ5s4JvoSOSjh5LUYnc2USxqi7qBgKCD98VHrnmW3Ghod4uGopaaCShNUxNVrOPe0TbTsPV4NH)
 
-[](https://commons.wikimedia.org/wiki/File:Shop_Until_You_Drop_by_Banksy.JPG)
+[](https://commons.wikimedia.org/wiki/File:ShopUntilYouDropbyBanksy.JPG)
 
 Это уже стало чем-то вроде клише:
 
 **Игрок:** Я спрыгиваю на землю.
 
-**Ведущий:** Ты _уверен_, что хочешь это сделать?
+**Ведущий:** Ты уверен, что хочешь это сделать?
 
 Дело тут в том, что если ваши игроки собираются совершить что-то очевидно самоубийственное с вашей, Ведущего, точки зрения, значит у вас, вероятно, возникло какое-то недопонимание. Простой пример:
 
@@ -70,13 +70,13 @@ _Перевел Ангон в июне 2018_
 
 **Игрок:** Я спрыгиваю на землю.
 
-**Ведущий:** Ты _уверен_, что хочешь это сделать?
+**Ведущий:** Ты уверен, что хочешь это сделать?
 
 **Игрок:** А в чем дело? Там внизу лава или что-то вроде?
 
 **Ведущий:** Нет, но здание высотой 200 футов. Ты получишь 20к6 единиц урона, если спрыгнешь.
 
-**Игрок:** Я собираюсь сотворить заклинание _Падение пера_ (feather fall). Я просто хочу, чтобы принцесса _решила_, что я совершил самоубийство.
+**Игрок:** Я собираюсь сотворить заклинание Падение пера (feather fall). Я просто хочу, чтобы принцесса решила, что я совершил самоубийство.
 
 **Ведущий:** Ясно, продолжай.
 
@@ -94,7 +94,7 @@ _Перевел Ангон в июне 2018_
 
 Отсюда следует более общий принцип:
 
-_Если вы не понимаете, чего игроки стараются достичь данным действием,__выясните это перед тем, как вынести суждение относительно этого действия._
+Если вы не понимаете, чего игроки стараются достичь данным действием,выясните это перед тем, как вынести суждение относительно этого действия.
 
 ## Намерение - это не начало действия
 
@@ -102,15 +102,15 @@ _Если вы не понимаете, чего игроки стараются
 
 Увлекшись игрой, мы подчас описываем свои заявки как происходящие в настоящем времени действия: “Я спрыгиваю с крыши!” или “Я пронзаю его мечом!”.
 
-Несомненно, _возможно_ трактовать такие заявки как необратимые (irrevocable) (и некоторые неопытные Ведущие так и делают), но как мы только что увидели, это нередко приводит к неудовлетворительным результатам. Лучше понимать такие заявки в том смысле, который в них на самом деле вкладывается: “Я намереваюсь спрыгнуть с крыши” или “Я хочу пронзить его своим мечом”.
+Несомненно, возможно трактовать такие заявки как необратимые (irrevocable) (и некоторые неопытные Ведущие так и делают), но как мы только что увидели, это нередко приводит к неудовлетворительным результатам. Лучше понимать такие заявки в том смысле, который в них на самом деле вкладывается: “Я намереваюсь спрыгнуть с крыши” или “Я хочу пронзить его своим мечом”.
 
-Вместе с тем, очевидно _существует_ точка невозврата, после которой игрок не может “взять назад” (“take back”) заявленное действие. Это происходит в тот момент, когда мы начинаем разрешать действие, которое он намеревался совершить. В этот переломный момент действие действительно _началось_.
+Вместе с тем, очевидно существует точка невозврата, после которой игрок не может “взять назад” (“take back”) заявленное действие. Это происходит в тот момент, когда мы начинаем разрешать действие, которое он намеревался совершить. В этот переломный момент действие действительно началось.
 
-Не следует также путать намерение с исходом. Например, если игрок заявляет “Я хочу пронзить его мечом насквозь!”, совершенно необязательно, что именно это произойдет. Более того, необязательно, что это произойдет даже _при успешном броске атаки_. Если игрок преуспел на броске атаки (и персонаж попал по цели), удар может только сорвать с полурослика (halfling) куртку, открыв мифрильную кольчугу (shirt of mithril) под ней. (Или, как вариант, результат броска на урон (damage roll) может быть недостаточно высок и не соответствовать тому исходу, при котором враг насквозь пронзен мечом. К этому мы еще вернемся.)
+Не следует также путать намерение с исходом. Например, если игрок заявляет “Я хочу пронзить его мечом насквозь!”, совершенно необязательно, что именно это произойдет. Более того, необязательно, что это произойдет даже при успешном броске атаки. Если игрок преуспел на броске атаки (и персонаж попал по цели), удар может только сорвать с полурослика (halfling) куртку, открыв мифрильную кольчугу (shirt of mithril) под ней. (Или, как вариант, результат броска на урон (damage roll) может быть недостаточно высок и не соответствовать тому исходу, при котором враг насквозь пронзен мечом. К этому мы еще вернемся.)
 
-Разумеется, _на практике_ разделение между намерением, началом действия, разрешением действия и исходом зачастую стирается. Если игрок за игровым столом заявляет что-нибудь вроде “Я говорю леди Гвендолин (Lady Gwendolyn), что она самая прекрасная девушка из всех мною виденных”, то это просто происходит. Подобным образом, заявка “Я прохожу через комнату” обычно приводит к автоматическому результату: намерение, начало действия и его разрешение происходят одновременно, а исход - практически одновременно, поскольку сразу после этого будет сказано что-нибудь вроде “Ты теперь на другой стороне комнаты”.
+Разумеется, на практике разделение между намерением, началом действия, разрешением действия и исходом зачастую стирается. Если игрок за игровым столом заявляет что-нибудь вроде “Я говорю леди Гвендолин (Lady Gwendolyn), что она самая прекрасная девушка из всех мною виденных”, то это просто происходит. Подобным образом, заявка “Я прохожу через комнату” обычно приводит к автоматическому результату: намерение, начало действия и его разрешение происходят одновременно, а исход - практически одновременно, поскольку сразу после этого будет сказано что-нибудь вроде “Ты теперь на другой стороне комнаты”.
 
-Это, очевидно, хорошо для течения игрового процесса (gameplay). Не требуется (да и не нужно) каждый раз останавливаться и разделять взаимодействие на его составляющие. Но если возникнет противоречие или путаница и потребуется устранить неполадки, будет полезным иметь в виду, что на самом деле это _отдельные этапы_.
+Это, очевидно, хорошо для течения игрового процесса (gameplay). Не требуется (да и не нужно) каждый раз останавливаться и разделять взаимодействие на его составляющие. Но если возникнет противоречие или путаница и потребуется устранить неполадки, будет полезным иметь в виду, что на самом деле это отдельные этапы.
 
 ## Одноэтапные и многоэтапные намерения
 
@@ -118,11 +118,11 @@ _Если вы не понимаете, чего игроки стараются
 
 Но не все, что выглядит как одноэтапное намерение, на самом деле является таковым. Например, если игрок заявляет “Я хочу запрыгнуть на груду ящиков (crates)”, то одноэтапное намерение заключается в “оказаться на груде ящиков”. Вроде все просто. Но на самом деле целью игрока при запрыгивании на груду ящиков может быть более удобная позиция для стрельбы по плохим парням. Если позиция на груде ящиков действительно более удобная, то все отлично. Если же это не так, то может пройти еще целый ход (full round) перед тем, как обнаружится недопонимание. (И к этому моменту, конечно, уже слишком поздно его устранять.)
 
-В конечном счете, мы возвращаемся к нашему общему принципу (понимать, _зачем_ игроки пытаются совершить что-либо, перед тем, как выносить суждение относительно этого действия). Однако из сказанного выше следует, что вам необходимо понимать цели игроков не только на на микроуровне (micro-level), но и на макроуровне (macro-level) (И, по правде сказать, недопонимания на макроуровне могут нанести намного больше ущерба игре, поскольку до того, как они станут понятны, на достижение цели может оказаться затрачено очень много средств.)
+В конечном счете, мы возвращаемся к нашему общему принципу (понимать, зачем игроки пытаются совершить что-либо, перед тем, как выносить суждение относительно этого действия). Однако из сказанного выше следует, что вам необходимо понимать цели игроков не только на на микроуровне (micro-level), но и на макроуровне (macro-level) (И, по правде сказать, недопонимания на макроуровне могут нанести намного больше ущерба игре, поскольку до того, как они станут понятны, на достижение цели может оказаться затрачено очень много средств.)
 
 ## Понимание применяемого игроком способа
 
-Более того, понимания намерения недостаточно. Вам также нужно понимать, какой _способ_ применяется для достижения данного намерения.
+Более того, понимания намерения недостаточно. Вам также нужно понимать, какой способ применяется для достижения данного намерения.
 
 Опять же, на практике намерение и способ подчас смешиваются, обычно поскольку играющие естественным образом переходят сразу к способу. “Я хочу пронзить его мечом!” - это способ, за которым прячется более общее намерение “Я хочу навредить ему!” (И, по правде говоря, я собираюсь в дальнейшем рассматривать намерение и способ как одно и то же, поскольку большую часть времени так оно и есть).
 
@@ -134,11 +134,11 @@ _Если вы не понимаете, чего игроки стараются
 
 Обычно этого достаточно. Но иногда вам могут попасться игроки, которые хотят просто “закидать это игромеханикой” (“throw a mechanic at it”). Это чревато проблемами, поскольку (а) вам придется постоянно требовать от них дополнительных подробностей, и (б) они нередко верят, что “Я использую Дипломатию, чтобы соблазнить ее” или “Я использую Знание Подземелий (Dungeoneering), чтобы оказаться по другую сторону” - это осмысленные ответы на подобный вопрос. В таком случае вам просто нужно начать напирать на конкретные подробности: “Как ты приветствуешь ее? Что ты ей говоришь? Когда она говорит то-то и то-то, как ты отвечаешь?”
 
-Следует отметить, что это одна из причин, по которой я говорю об _Искусстве_ (ART) суждений, а не о _Науке_ (SCIENCE) суждений. Существует золотая середина, в которой способ был описан достаточно подробно для того, чтобы умения игрока привели в действие умения персонажа. Что считать этой золотой серединой, зависит от вас, от ваших игроков, от используемой системы правил и от непосредственной ситуации, сложившейся на сеансе игры.
+Следует отметить, что это одна из причин, по которой я говорю об Искусстве (ART) суждений, а не о Науке (SCIENCE) суждений. Существует золотая середина, в которой способ был описан достаточно подробно для того, чтобы умения игрока привели в действие умения персонажа. Что считать этой золотой серединой, зависит от вас, от ваших игроков, от используемой системы правил и от непосредственной ситуации, сложившейся на сеансе игры.
 
 Например, представьте, что ИПы - полицейские детективы, входящие в комнату, посередине которой лежит труп. Намерения игроков в этой сцене скорее всего будут заключаться в вопросах, ответы на которые они хотят получить. Но насколько конкретными должны быть эти вопросы для того, чтобы Ведущий мог принять суждение о том, выяснят они ответ или нет?
 
-![](https://lh5.googleusercontent.com/8ZpIlwz-5uqGnoQuVlPPenp6lDITU-kB3UeVoc6ScijpqIpuyDDCu86pPyT18bpCZQlWmAMimkhzhukNjLiWWx6gvLhUTKY3QgaMVGw5KkXXx_RwvDaOytmRInGbPyQvWw-Q4cOu)
+![](https://lh5.googleusercontent.com/8ZpIlwz-5uqGnoQuVlPPenp6lDITU-kB3UeVoc6ScijpqIpuyDDCu86pPyT18bpCZQlWmAMimkhzhukNjLiWWx6gvLhUTKY3QgaMVGw5KkXXxRwvDaOytmRInGbPyQvWw-Q4cOu)
 
 [](http://www.thealexandrian.net/images/20151019b.jpg)
 
@@ -154,7 +154,7 @@ _Если вы не понимаете, чего игроки стараются
 
 То есть если ИП находит в подземелье сундук, типичной реакцией игрока может быть “Я обыскиваю его в поисках ловушек.” На что Ведущий может ответить “Хорошо, это достаточно конкретно. Бросай на Обыск.” Но позднее может найтись другой сундук, который игрок сочтет куда более подозрительным, так что он скажет “Я начинаю очень осторожно проверять, нет ли нажимных плит на полу вокруг и под сундуком” или “Я тщательно осматриваю сундук снаружи перед тем, как коснуться его.” И Ведущий может ответить на такие заявки, включив эти дополнительные подробности в принимаемое суждение. (Умения игрока превосходят умения персонажа.)
 
-Дело в том, что от игроков можно ожидать лишь настолько подробных заявок, насколько они в данный момент заинтересованы в происходящем. И до тех пор, пока Ведущий считает подробность заявок достаточной для принятия суждений, она сама собой настраивается на тот уровень, который подходит всем играющим _в данном конкретном случае_. (Позднее, в каком-то другом случае, их предпочтения могут отличаться. Но в таком случае настройка тоже произойдет сама собой, и вам даже не придется об этом задумываться.)
+Дело в том, что от игроков можно ожидать лишь настолько подробных заявок, насколько они в данный момент заинтересованы в происходящем. И до тех пор, пока Ведущий считает подробность заявок достаточной для принятия суждений, она сама собой настраивается на тот уровень, который подходит всем играющим в данном конкретном случае. (Позднее, в каком-то другом случае, их предпочтения могут отличаться. Но в таком случае настройка тоже произойдет сама собой, и вам даже не придется об этом задумываться.)
 
 ## Начало действия
 
