--- a/src/content/posts/translations/alexandrian-art-of-rulings-4.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-4.mdx
@@ -12,13 +12,13 @@ author: Justin Alexander
 translator: Angon
 ---
 
-Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
+Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
 
-_Оригинал:_ [_Art of Rulings – Part 4: Default to Yes_](http://thealexandrian.net/wordpress/38013/roleplaying-games/art-of-rulings-part-4-default-to-yes)
+Оригинал: [Art of Rulings – Part 4: Default to Yes](http://thealexandrian.net/wordpress/38013/roleplaying-games/art-of-rulings-part-4-default-to-yes)
 
-_Написал_ [_Джастин Александер_](http://thealexandrian.net/about) _в ноябре 2015_
+Написал [Джастин Александер](http://thealexandrian.net/about) в ноябре 2015
 
-_Перевел Ангон в июле 2018_
+Перевел Ангон в июле 2018
 
 Мы начали с рассмотрения того, как заявки игроков (или их отсутствие в случае пассивного восприятия) запускает принятие суждения. Затем мы разложили заявку на намерение, способ и начало действия. Теперь мы готовы перейти к самой сути суждения: разрешению (Resolution).
 
@@ -26,7 +26,7 @@ _Перевел Ангон в июле 2018_
 
 ## Согласие по умолчанию
 
-![](https://lh6.googleusercontent.com/H3AhgqPdirEe_NcFvC1y1C13WW_CwZr04VR3TaNUatUhGbcpKddCcar6KL8RV6oGPNQQfnUOyWSCGoYwpYc7RgCW6Ql818qZ3cmglIieFsKfJxAsiQpBIyoYbNx4b8hAWQdgbWlr)
+![](https://lh6.googleusercontent.com/H3AhgqPdirEeNcFvC1y1C13WWCwZr04VR3TaNUatUhGbcpKddCcar6KL8RV6oGPNQQfnUOyWSCGoYwpYc7RgCW6Ql818qZ3cmglIieFsKfJxAsiQpBIyoYbNx4b8hAWQdgbWlr)
 
 [](http://www.thealexandrian.net/images/20151110.jpg)
 
@@ -48,7 +48,7 @@ _Перевел Ангон в июле 2018_
 
 Это делает такой ответ невероятно полезным инструментом. Но также поэтому вам практически никогда не стоит его использовать.
 
-На самом деле вам стоит стремиться к прямо противоположному: к _согласию по умолчанию_ (Default to yes).
+На самом деле вам стоит стремиться к прямо противоположному: к согласию по умолчанию (Default to yes).
 
 **Игрок:** Я хочу перепрыгнуть через расщелину.
 
@@ -70,7 +70,7 @@ _Перевел Ангон в июле 2018_
 
 Однако если соглашаться всегда, то это приведет к проблеме отсутствия вызова (challenge). Это скучно и предсказуемо. (Кроме того, это не отражает то, как устроен мир: провал (failure) или возможность провала - это часть нашей жизни).
 
-Все это означает, что нам нужно добавить в наш инструментарий (toolkit) новый инструмент: _“Да, но…”_ (Yes, but…).
+Все это означает, что нам нужно добавить в наш инструментарий (toolkit) новый инструмент: “Да, но…” (Yes, but…).
 
 **Игрок:** Я хочу перепрыгнуть через расщелину.
 
@@ -92,7 +92,7 @@ _Перевел Ангон в июле 2018_
 
 Но что, если желания игроков противоречат известным фактам игрового мира (game world)? Например, они хотят узнать слухи (rumors) об огре, но вы знаете, что в окрестностях этого города нет никаких огров?
 
-Можно предположить, что это приводит нас обратно к “нет”, но до этого дело еще не дошло. Вообще, “нет” является приемлемым ответом только если намерение прямо противоречит реальности игрового мира. Так что до того, как вернуться к “нет”, стоит остановиться на _“Нет, но...”_ (No, but…).
+Можно предположить, что это приводит нас обратно к “нет”, но до этого дело еще не дошло. Вообще, “нет” является приемлемым ответом только если намерение прямо противоречит реальности игрового мира. Так что до того, как вернуться к “нет”, стоит остановиться на “Нет, но...” (No, but…).
 
 **Игрок:** Могу я найти гильдию волшебников (wizard’s guild)?
 
@@ -110,7 +110,7 @@ _Перевел Ангон в июле 2018_
 
 **Ведущий:** В Берлине, в 1982 году? Нет.
 
-Как вы можете видеть, “Нет, но…” во многом то же самое, что и “Да, но…”, просто с другой точки зрения. Четкое различие можно провести тогда, когда выбранный персонажем способ достижения намерения явно не подходит. “_Нет_, таким образом ты своей цели не достигнешь. _Но_ есть другой подход, которым ты мог бы воспользоваться.”
+Как вы можете видеть, “Нет, но…” во многом то же самое, что и “Да, но…”, просто с другой точки зрения. Четкое различие можно провести тогда, когда выбранный персонажем способ достижения намерения явно не подходит. “Нет, таким образом ты своей цели не достигнешь. Но есть другой подход, которым ты мог бы воспользоваться.”
 
 ## Диапазон произвола Ведущего
 
@@ -121,11 +121,11 @@ _Перевел Ангон в июле 2018_
 - Нет, но…
 - Нет
 
-Причина, по которой стоит соглашаться по умолчанию (то есть начинать с верхнего пункта этого диапазона и прорабатывать их по очереди, спускаясь вниз) состоит в том, что каждый сделанный игроками запрос обычно отражает то, что _им хочется совершить_. Когда игрок говорит “Я хочу совершить Х”, он имеет в виду “Я бы получил удовольствие (fun), если бы смог совершить Х”. И если у вас нет действительно хорошей причины, не стоит запрещать игрокам совершать то, что им хочется. Сеансу игры, скорее всего, пойдет на пользу, если вы сможете выяснить (и предложить игрокам) подход, с помощью которого они смогут совершить это.
+Причина, по которой стоит соглашаться по умолчанию (то есть начинать с верхнего пункта этого диапазона и прорабатывать их по очереди, спускаясь вниз) состоит в том, что каждый сделанный игроками запрос обычно отражает то, что им хочется совершить. Когда игрок говорит “Я хочу совершить Х”, он имеет в виду “Я бы получил удовольствие (fun), если бы смог совершить Х”. И если у вас нет действительно хорошей причины, не стоит запрещать игрокам совершать то, что им хочется. Сеансу игры, скорее всего, пойдет на пользу, если вы сможете выяснить (и предложить игрокам) подход, с помощью которого они смогут совершить это.
 
 В некоторых случаях они откажутся от этого подхода (“Я не собираюсь идти в Грейхок, до него слишком далеко.”) Это нормально. Это означает, что они предпочитают совершить что-нибудь еще. Но вы дали им значимый выбор (meaningful choice), а не отобрали его. В конце концов, выбор - это суть ролевых игр.
 
-![Banksy - Bomb Hugger](https://lh4.googleusercontent.com/K2zQKNJOc7-umpvwlzmfebMkkhbgp1u1dJf5lnVjiA5SNBkRAhFpaSz_OkfoI04-tVRgHGjhZWopyOpUkmWIZT1LWg5kObgvEIqDhrjHCNHOjWIngHp3cZfcnnLcPzsdnER6PbwR)
+![Banksy - Bomb Hugger](https://lh4.googleusercontent.com/K2zQKNJOc7-umpvwlzmfebMkkhbgp1u1dJf5lnVjiA5SNBkRAhFpaSzOkfoI04-tVRgHGjhZWopyOpUkmWIZT1LWg5kObgvEIqDhrjHCNHOjWIngHp3cZfcnnLcPzsdnER6PbwR)
 
 [](http://www.thealexandrian.net/images/20151110b.jpg)
 
