--- a/src/content/posts/translations/alexandrian-art-of-rulings-6.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-6.mdx
@@ -12,15 +12,15 @@ author: Justin Alexander
 translator: Angon
 ---
 
-Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
+Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
 
-_Оригинал:_ [_Art of Rulings – Part 6: Fictional Cleromancy_](http://thealexandrian.net/wordpress/38140/roleplaying-games/art-of-rulings-part-6-fictional-cleromancy)
+Оригинал: [Art of Rulings – Part 6: Fictional Cleromancy](http://thealexandrian.net/wordpress/38140/roleplaying-games/art-of-rulings-part-6-fictional-cleromancy)
 
-_Написал_ [_Джастин Александер_](http://thealexandrian.net/about) _в ноябре 2015_
+Написал [Джастин Александер](http://thealexandrian.net/about) в ноябре 2015
 
-_Перевел Ангон в июле 2018_
+Перевел Ангон в июле 2018
 
-![Banksy - Rat on a Chain](https://lh5.googleusercontent.com/1qnLe_4IbUBC3euwh9QTZFx2wugYdN3ZqPiOKZQsAxetnK7CTIxR8OI1JAVLdbK0ch2lc4pwRXGlQ6eQU-R4UqNDz8eLK9cAn3Eq2Wdp_C25-hlL_mvfwS3jAyZR1iKOz3hUXnNW)
+![Banksy - Rat on a Chain](https://lh5.googleusercontent.com/1qnLe4IbUBC3euwh9QTZFx2wugYdN3ZqPiOKZQsAxetnK7CTIxR8OI1JAVLdbK0ch2lc4pwRXGlQ6eQU-R4UqNDz8eLK9cAn3Eq2WdpC25-hlLmvfwS3jAyZR1iKOz3hUXnNW)
 
 [](http://www.thealexandrian.net/images/20151130.jpg)
 
@@ -30,7 +30,7 @@ _Перевел Ангон в июле 2018_
 
 ## Градация результатов
 
-Простейший способ отойти от простой дихотомии успеха и провала - это назначать задаче один показатель сложности (difficulty number), но затем толковать результат, основываясь на _величине успеха_ (_margin of success_) или _величине провала_ (_margin of failure_). Простейшая универсальная система исходов может выглядеть как-то так:
+Простейший способ отойти от простой дихотомии успеха и провала - это назначать задаче один показатель сложности (difficulty number), но затем толковать результат, основываясь на величине успеха (margin of success) или величине провала (margin of failure). Простейшая универсальная система исходов может выглядеть как-то так:
 
 Успех
 
@@ -46,7 +46,7 @@ _Перевел Ангон в июле 2018_
 
 Очевидно, что этот диапазон довольно легко расширить. (Простой пример: величина успеха 5+ на броске атаки в бою может давать +2 к урону, величина успеха 10+ - +4 к урону и так далее.) В некоторых случаях сама идея “успеха” или “провала” совершенно улетучится - вопрос будет состоять только в том, насколько хорошо (или насколько плохо) у персонажа получилось что-то сделать.
 
-Другой подход к рассмотрению градации успеха - это назначение Ведущим _множественной сложности_ (_multiple difficulties_) для задачи, у которой есть множество возможных исходов. Я часто использую этот прием для проверок Сбора Сведений (Gather Information), например:
+Другой подход к рассмотрению градации успеха - это назначение Ведущим множественной сложности (multiple difficulties) для задачи, у которой есть множество возможных исходов. Я часто использую этот прием для проверок Сбора Сведений (Gather Information), например:
 
 <table class="wp-block-table"><tbody><tr><td><strong>УС</strong></td><td><strong>Собранные сведения</strong></td></tr><tr><td>10</td><td>Несколько месяцев назад “Роберт” (“Robert”) наводил справки насчет каменщиков и плотников, которые могли бы искать работу. Если он и нашел кого-то, никто не знает кого.</td></tr><tr><td>15</td><td>“Роберт” пытался купить ртуть, и в больших объемах. Он останавливался где-то на северном конце Старого Города (Old City).</td></tr><tr><td>20</td><td>“Роберт” останавливался в Разбитом Полумесяце (Broken Moon), но его никто не видел уже некоторое время.</td></tr></tbody></table>
 
@@ -58,21 +58,21 @@ _Перевел Ангон в июле 2018_
 
 Теперь, когда стало понятно, что игромеханическое разрешение может выдавать диапазон результатов, можно сделать следующий шаг и осознать, что этот диапазон не обязан включать в себя все варианты. Возможные результаты не обязаны варьироваться от “унизительного провала” (“abject failure”) до “непревзойденного успеха” (“outstanding success”).
 
-![Eclipse Phase - Posthuman Studios](https://lh6.googleusercontent.com/ADoikVzQDc6rio6CHuZjjwbAREkq0WPKn-Yw5WyCG8qtnKL23HDJlLaHPRUXEIqszFknAp8tEmMb4nKL6brKsPiihTAe_CwZZWmVN-SD3TfliFteoaBoBHZYWIr7WhwEQyzXeR2M)
+![Eclipse Phase - Posthuman Studios](https://lh6.googleusercontent.com/ADoikVzQDc6rio6CHuZjjwbAREkq0WPKn-Yw5WyCG8qtnKL23HDJlLaHPRUXEIqszFknAp8tEmMb4nKL6brKsPiihTAeCwZZWmVN-SD3TfliFteoaBoBHZYWIr7WhwEQyzXeR2M)
 
 [](http://www.amazon.com/exec/obidos/ASIN/0984583505/digitalcomi0a-20)
 
-Особенно полезным приемом, на мой взгляд, является “испытание с неизбежным успехом” (simple success test), как оно называется в [_Eclipse Phase_](http://www.amazon.com/exec/obidos/ASIN/0984583505/digitalcomi0a-20). Это действие, в котором персонаж так или иначе преуспеет - вопрос только в том, сколько времени это у него займет или насколько полным будет его успех.
+Особенно полезным приемом, на мой взгляд, является “испытание с неизбежным успехом” (simple success test), как оно называется в [Eclipse Phase](http://www.amazon.com/exec/obidos/ASIN/0984583505/digitalcomi0a-20). Это действие, в котором персонаж так или иначе преуспеет - вопрос только в том, сколько времени это у него займет или насколько полным будет его успех.
 
-Если учесть предыдущее [обсуждение Взятия 1](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#heading=h.iyv3qg6nkw6q), станет видно, что испытания с неизбежным успехом могут возникать чисто математически при различных способах игромеханического разрешения действий. Успех может быть обеспечен вне зависимости от того, что у вас выпадет на кубике, так что единственная цель броска - определение качества успеха. (То же самое относится и к вышеприведенным таблицам Сбора сведений. Результат 9 или менее на проверке навыка означает провал: персонаж ничего не узнает о так называемом “Роберте”. Но если у персонажа модификатор +9 в навыке Сбор сведений, тогда успех ему обеспечен: он непременно узнает что-нибудь о “Роберте”, вопрос только в том, сколько сведений он соберет.)
+Если учесть предыдущее [обсуждение Взятия 1](https://docs.google.com/document/d/13Ov9ItJiZgUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#heading=h.iyv3qg6nkw6q), станет видно, что испытания с неизбежным успехом могут возникать чисто математически при различных способах игромеханического разрешения действий. Успех может быть обеспечен вне зависимости от того, что у вас выпадет на кубике, так что единственная цель броска - определение качества успеха. (То же самое относится и к вышеприведенным таблицам Сбора сведений. Результат 9 или менее на проверке навыка означает провал: персонаж ничего не узнает о так называемом “Роберте”. Но если у персонажа модификатор +9 в навыке Сбор сведений, тогда успех ему обеспечен: он непременно узнает что-нибудь о “Роберте”, вопрос только в том, сколько сведений он соберет.)
 
-На практике, конечно, не всегда необходимо осуществлять подобные игромеханические расчеты, чтобы обосновать испытание с неизбежным успехом. Можно просто решить, что, например, персонаж - профессионал в своем деле, а задание не похоже на то, которое профессионал мог бы со значимой вероятностью провалить. В этом случае можно либо [согласиться по умолчанию](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#heading=h.560bgi7equux) и объявить, что действие было успешным, либо обратиться к воображаемому жребию, чтобы узнать степень успеха персонажа.
+На практике, конечно, не всегда необходимо осуществлять подобные игромеханические расчеты, чтобы обосновать испытание с неизбежным успехом. Можно просто решить, что, например, персонаж - профессионал в своем деле, а задание не похоже на то, которое профессионал мог бы со значимой вероятностью провалить. В этом случае можно либо [согласиться по умолчанию](https://docs.google.com/document/d/13Ov9ItJiZgUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#heading=h.560bgi7equux) и объявить, что действие было успешным, либо обратиться к воображаемому жребию, чтобы узнать степень успеха персонажа.
 
 (Предположительно могут быть и проверки, в которых неизбежен провал, а игромеханическая проверка определяет только степень этого провала. Вообще, я подозрительно отношусь к такому подходу, поскольку, кажется, им чаще всего злоупотребляют, загоняя игроков на рельсы ([enforce railroads](http://thealexandrian.net/wordpress/36900/roleplaying-games/the-railroading-manifesto)) и тому подобное. Но можно представить себе ситуацию, в которой персонаж намеренно избрал направление действий, которое, как он знает, не может увенчаться успехом. Реальный пример подобного - вошедшая в легенду битва при Фермопилах.)
 
 ## Провал с продвижением
 
-Другая точка зрения на испытание с неизбежным успехом - это принцип _“_[_провала с продвижением_](http://ru.rpg.wikia.com/wiki/Fail_forward)_”_ (_failing forward_).
+Другая точка зрения на испытание с неизбежным успехом - это принцип “[провала с продвижением](http://ru.rpg.wikia.com/wiki/Failforward)” (failing forward).
 
 В основе своей провал с продвижением практически ничем не отличается от испытания с неизбежным успехом: игромеханический провал описывается как произошедший в мире игры (game world) успех с осложнениями.
 
@@ -82,7 +82,7 @@ _Перевел Ангон в июле 2018_
 
 Вообще, существует множество полезных приемов, которые можно освоить, чтобы вырваться из стандартной парадигмы “успеха или провала” (success/failure). Однако мне стоит предостеречь вас о том, что с термином “провал с продвижением” связаны кое-какие пагубные идеи.
 
-Во-первых, некоторые игроки необычайно идеализируют провал с продвижением и полагают, что этот прием должен использоваться _постоянно_. Кажется, это происходит вследствие распространенности мнения о том, что провал неизбежно приводит к полному прекращению развития событий (scenario). Классический пример этого - детективный сюжет (mystery scenario), застопорившийся из-за того, что игроки не сумели найти улику.
+Во-первых, некоторые игроки необычайно идеализируют провал с продвижением и полагают, что этот прием должен использоваться постоянно. Кажется, это происходит вследствие распространенности мнения о том, что провал неизбежно приводит к полному прекращению развития событий (scenario). Классический пример этого - детективный сюжет (mystery scenario), застопорившийся из-за того, что игроки не сумели найти улику.
 
 Однако как показано в [Правиле Трех Улик](https://pnprpg.ru/blog/2014/08/25/thealexandrian-3clue/) ([Three Clue Rule](http://thealexandrian.net/wordpress/1118/roleplaying-games/three-clue-rule)), решение этой проблемы заключается в предоставлении множества путей к успеху. А необходимость обходить созданные в результате твоих провалов преграды заведет тебя туда, куда и не ожидаешь. Если бы ты сумел подкупить стражников, чтобы они пропустили тебя через заднюю дверь, ты бы никогда не полез через стену, не вломился бы через окно и не влюбился бы в принцессу, которую встретил за тем окном. Подчас с провала начинаются самые захватывающие ситуации и самые запоминающиеся сюжеты. Если вы совершенно уберете провалы из ваших игр, это не обогатит, а разорит их. Подобно вождению рельс (railroading), это ошибочный прием (broken technique), применяющийся для поспешного исправления другого ошибочного приема.
 
