--- a/src/content/posts/translations/alexandrian-art-of-rulings-7.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-7.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Art of Rulings - Глава 7: Векторы"
 date: "2019-09-17 18:00"
-description: "Перевод цикла статей Джастина Александера (Александриана) про искусство вынесения суждений (рулингов) во время вождения НРИ - часть 7.
+description: "Перевод цикла статей Джастина Александера (Александриана) про искусство вынесения суждений (рулингов) во время вождения НРИ - часть 7."
 tags: 
   - суждение
   - рулинг
@@ -14,11 +14,11 @@ translator: Angon
 
 Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
 
-_Оригинал:_ [_Art of Rulings – Part 7: Vectors_](https://thealexandrian.net/wordpress/38293/roleplaying-games/art-of-rulings-part-7-vectors)
+Оригинал: [Art of Rulings – Part 7: Vectors](https://thealexandrian.net/wordpress/38293/roleplaying-games/art-of-rulings-part-7-vectors)
 
-_Написал_ [_Джастин Александер_](http://thealexandrian.net/about) _в феврале 2016_
+Написал [Джастин Александер](http://thealexandrian.net/about) в феврале 2016
 
-_Перевел Ангон в июне 2018_
+Перевел Ангон в июне 2018
 
 ![](https://lh3.googleusercontent.com/sFMO0997abkOcNlOlX1zkNIMAEjHd4fow3KzvRAFxYvxfHU2olpug0FxH4yKqHiE4DZka9YNvk91rSrJSCeqQs846p6gV6NSjL3csNvLJEkloBtR1F9M-3DFnnh6v3elBOPbJD8m)
 
@@ -34,21 +34,21 @@ _Перевел Ангон в июне 2018_
 
 Перед тем, как углубиться в вопрос о разработке многоэтапного разрешения Ведущим, давайте сперва рассмотрим, как многоэтапные разрешения могут естественным образом возникать во время игры.
 
-Первая и, возможно, самая незамысловатая причина - это _незавершенная заявка_ (_incomplete declaration of method_).  Возвращаясь к одному из примеров выше: игрок заявляет, что хочет залезть на вершину утеса, а когда это действие разрешается, добавляет, что хочет подстрелить кого-то со снайперского насеста на вершине. В этом случае игрок, хотя и намеревался с самого начала выстрелить со снайперского насеста, разделил это намерение на отдельные части, поскольку инстинктивно понимал, что нужно сделать А перед тем, как сделать Б.
+Первая и, возможно, самая незамысловатая причина - это незавершенная заявка (incomplete declaration of method).  Возвращаясь к одному из примеров выше: игрок заявляет, что хочет залезть на вершину утеса, а когда это действие разрешается, добавляет, что хочет подстрелить кого-то со снайперского насеста на вершине. В этом случае игрок, хотя и намеревался с самого начала выстрелить со снайперского насеста, разделил это намерение на отдельные части, поскольку инстинктивно понимал, что нужно сделать А перед тем, как сделать Б.
 
-Во-вторых, многоэтапное разрешение может быть следствием _частичного успеха_ или _частичного провала_. Вы намеревались перепрыгнуть на другую сторону расщелины, но частично провалили вашу проверку Прыжков и повисли, уцепившись за уступ на дальней стороне расщелины. Теперь вам нужно предпринять другое действие, чтобы осуществить ваше намерение.
+Во-вторых, многоэтапное разрешение может быть следствием частичного успеха или частичного провала. Вы намеревались перепрыгнуть на другую сторону расщелины, но частично провалили вашу проверку Прыжков и повисли, уцепившись за уступ на дальней стороне расщелины. Теперь вам нужно предпринять другое действие, чтобы осуществить ваше намерение.
 
 Из этого следует важное заключение (take-away): количество этапов в потенциально многоэтапном разрешении может изменяться. В некоторых случаях оно даже может свестись к одному-единственному этапу. Обернем наш пример: допустим, чтобы перебраться через расщелину нужно перепрыгнуть ее, ухватиться за уступ, а потом подтянуться наверх. Но игрок выкидывает необычайный успех (extraordinary success) и вместо этого многоэтапного разрешения перепрыгивает расщелину одним прыжком.
 
-Наконец, существует _учет действий_ (_action economy_). Например, многоэтапное разрешение действий часто проявляется в бою, поскольку там существует жесткий предел того, сколько действий можно совершить за один ход: “Я схожу сюда в этом ходу, чтобы я мог добраться вот туда на следующем”.
+Наконец, существует учет действий (action economy). Например, многоэтапное разрешение действий часто проявляется в бою, поскольку там существует жесткий предел того, сколько действий можно совершить за один ход: “Я схожу сюда в этом ходу, чтобы я мог добраться вот туда на следующем”.
 
-![Star Wars: The Phantom Menace - Decoy in the Throne Room](https://lh4.googleusercontent.com/bdmp0lV9anB9fkQToxNOPv4MbI2Hn1LQ7wfOtSfg6njc1uq4F6fgcdCsUwelmPjvctWHrxXLxpXk5URIZ03LZE5E8pbiebVTfOMaMvje0ioQb1K9ll_bdWGdMbk7qIFQ6FyMaBkj)
+![Star Wars: The Phantom Menace - Decoy in the Throne Room](https://lh4.googleusercontent.com/bdmp0lV9anB9fkQToxNOPv4MbI2Hn1LQ7wfOtSfg6njc1uq4F6fgcdCsUwelmPjvctWHrxXLxpXk5URIZ03LZE5E8pbiebVTfOMaMvje0ioQb1K9llbdWGdMbk7qIFQ6FyMaBkj)
 
 [](http://www.amazon.com/exec/obidos/ASIN/B00E9PMML2/digitalcomi0a-20)
 
-Рассмотрев эти естественные примеры, можно заметить, что им свойственно разделяться на отдельные этапы по схеме “сначала А, потом Б, потом В”. То есть нужно сделать А перед тем, как сделать Б. Это похоже на заключительную часть фильма Звездные Войны: Пробуждение Силы ([_Star Wars: The Force Awakens_](http://www.amazon.com/exec/obidos/ASIN/B018FK66TU/digitalcomi0a-20)). Десантный отряд должен успешно совершить гиперпространственное сближение (hyperspace approach) с планетой перед тем, как отключить щиты, и им нужно отключить щиты перед тем, как Сопротивление (Resistance) сможет послать в атаку Икс-винги (X-Wings).
+Рассмотрев эти естественные примеры, можно заметить, что им свойственно разделяться на отдельные этапы по схеме “сначала А, потом Б, потом В”. То есть нужно сделать А перед тем, как сделать Б. Это похоже на заключительную часть фильма Звездные Войны: Пробуждение Силы ([Star Wars: The Force Awakens](http://www.amazon.com/exec/obidos/ASIN/B018FK66TU/digitalcomi0a-20)). Десантный отряд должен успешно совершить гиперпространственное сближение (hyperspace approach) с планетой перед тем, как отключить щиты, и им нужно отключить щиты перед тем, как Сопротивление (Resistance) сможет послать в атаку Икс-винги (X-Wings).
 
-Но есть и другой вариант, когда нужно выполнить множество требований, чтобы получить возможность совершить следующее действие - нужно сделать А, Б и В перед тем, как можно будет сделать Г. Примерно это произошло в конце фильма  Звездные Войны: Скрытая Угроза ([_Star Wars: The Phantom Menace_](http://www.amazon.com/exec/obidos/ASIN/B00E9PMML2/digitalcomi0a-20)). Амидале (Amidala) нужно арестовать вице-короля (Viceroy), джедаям (Jedi) - победить Дарта Мола (Darth Maul), а Энакину (Anakin) - уничтожить управляющий дроидами (droid) корабль перед тем, как Торговую Федерацию (Trade Federation) можно будет вынудить подписать новый мирный договор.
+Но есть и другой вариант, когда нужно выполнить множество требований, чтобы получить возможность совершить следующее действие - нужно сделать А, Б и В перед тем, как можно будет сделать Г. Примерно это произошло в конце фильма  Звездные Войны: Скрытая Угроза ([Star Wars: The Phantom Menace](http://www.amazon.com/exec/obidos/ASIN/B00E9PMML2/digitalcomi0a-20)). Амидале (Amidala) нужно арестовать вице-короля (Viceroy), джедаям (Jedi) - победить Дарта Мола (Darth Maul), а Энакину (Anakin) - уничтожить управляющий дроидами (droid) корабль перед тем, как Торговую Федерацию (Trade Federation) можно будет вынудить подписать новый мирный договор.
 
 Стоит отметить, что таким образом можно разделить действие на очень много этапов: чтобы достичь вашей цели, нужно выполнить А, Б и В, но чтобы совершить А, нужно сначала сделать Г, Д и Е.
 
@@ -56,7 +56,7 @@ _Перевел Ангон в июне 2018_
 
 Теперь можно переключить наше внимание с многоэтапных разрешений, возникающих естественным образом, на ситуацию, при которой Ведущий намеренно разделяет разрешение действия на несколько этапов. Когда стоит это делать?  И зачем это нужно? На сколько этапов разделять действие?
 
-Одним из способов ответить на эти вопросы может быть то, что Сердитый ДМ ([Angry DM](https://theangrygm.com/)) называет _очевидной вехой_ ([_visible benchmark_](https://theangrygm.com/adjudicate-actions-like-a-boss/)). (В другой своей статье Сердитый ДМ обозначил этот же принцип как “[ИПы могут видеть тикающие часы](http://rpg-news.ru/2014/01/30/pyat-prostyx-pravil-primeneniya-siste-2/)” ([PCs Can See The Ticking Clock](https://theangrygm.com/five-simple-rules-for-dating-my-teenaged-skill-system/)) - примечание переводчика.) Когда вы завершили выполнение одного этапа в ходе многоэтапного разрешения, должна быть явная веха, отмечающая прогресс в достижении цели. Например, представьте ситуацию, в которой ИП взламывает замок на двери, а Ведущий решает, что это действие стоит разрешить тремя последовательными проверками Взлома (Lockpicking checks). После того, как первая проверка была пройдена, Ведущий спрашивает игрока “Хочешь ли ты продолжать взламывать замок?”
+Одним из способов ответить на эти вопросы может быть то, что Сердитый ДМ ([Angry DM](https://theangrygm.com/)) называет очевидной вехой ([visible benchmark](https://theangrygm.com/adjudicate-actions-like-a-boss/)). (В другой своей статье Сердитый ДМ обозначил этот же принцип как “[ИПы могут видеть тикающие часы](http://rpg-news.ru/2014/01/30/pyat-prostyx-pravil-primeneniya-siste-2/)” ([PCs Can See The Ticking Clock](https://theangrygm.com/five-simple-rules-for-dating-my-teenaged-skill-system/)) - примечание переводчика.) Когда вы завершили выполнение одного этапа в ходе многоэтапного разрешения, должна быть явная веха, отмечающая прогресс в достижении цели. Например, представьте ситуацию, в которой ИП взламывает замок на двери, а Ведущий решает, что это действие стоит разрешить тремя последовательными проверками Взлома (Lockpicking checks). После того, как первая проверка была пройдена, Ведущий спрашивает игрока “Хочешь ли ты продолжать взламывать замок?”
 
 Это бессмыслица. Зачем Ведущий задает этот вопрос? Он не имеет смысла. Можно представить себе подобные бессмысленные разговоры: “Ты еще немного убеждаешь его.”, “Ты проехал еще пару кварталов до места назначения, хочешь продолжать ехать?” или “Ты продолжаешь идти по следам”.
 
@@ -66,7 +66,7 @@ _Перевел Ангон в июне 2018_
 
 В большинстве ситуаций эти вехи должны быть очевидны для персонажей, но могут быть и случаи (например, приближающийся стражник), в которых веха имеет значение в мире игры, при том что персонажи (и, возможно, даже игроки) не осведомлены о ней.
 
-На самом деле можно, наверно, обобщить идею “очевидных вех” до “значимых последствий”. Значимые последствия должны быть у каждого этапа многоэтапного разрешения. (И желательно, чтобы последствия были значимыми вне зависимости от того, успешно или нет разрешился этот этап, по той же самой причине, по которой это условие является [пропускным пунктом для одноэтапного разрешения действий](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#heading=h.a169th3njuyo)). А это зачастую возвращает нас к нашему старому другу _значимому выбору_.
+На самом деле можно, наверно, обобщить идею “очевидных вех” до “значимых последствий”. Значимые последствия должны быть у каждого этапа многоэтапного разрешения. (И желательно, чтобы последствия были значимыми вне зависимости от того, успешно или нет разрешился этот этап, по той же самой причине, по которой это условие является [пропускным пунктом для одноэтапного разрешения действий](https://docs.google.com/document/d/13Ov9ItJiZgUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#heading=h.a169th3njuyo)). А это зачастую возвращает нас к нашему старому другу значимому выбору.
 
 Другими словами, если вы посмотрите на разрешение действия в целом и разломите его (break it apart) в каждой точке, содержащей значимый выбор или значимые последствия… эти разломы окажутся отдельными этапами многоэтапного разрешения действия.
 
