--- a/src/content/posts/translations/alexandrian-art-of-rulings-8.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-8.mdx
@@ -12,7 +12,7 @@ author: Justin Alexander
 translator: Angon
 ---
 
-_Оригинал:_ [Art of Rulings – Part 8: Let it Ride _](https://thealexandrian.net/wordpress/38313/roleplaying-games/the-art-of-rulings-part-8-let-it-ride)
+Оригинал: [Art of Rulings – Part 8: Let it Ride ](https://thealexandrian.net/wordpress/38313/roleplaying-games/the-art-of-rulings-part-8-let-it-ride)
 
 
 
