--- a/src/content/posts/translations/alexandrian-art-of-rulings-5.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-5.mdx
@@ -12,15 +12,15 @@ author: Justin Alexander
 translator: Angon
 ---
 
-Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
+Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
 
-_Оригинал:_ [_Art of Rulings – Part 5: Skill and Difficulty_](http://thealexandrian.net/wordpress/38039/roleplaying-games/art-of-rulings-part-5-skill-and-difficulty)
+Оригинал: [Art of Rulings – Part 5: Skill and Difficulty](http://thealexandrian.net/wordpress/38039/roleplaying-games/art-of-rulings-part-5-skill-and-difficulty)
 
-_Написал_ [_Джастин Александер_](http://thealexandrian.net/about) _в ноябре 2015_
+Написал [Джастин Александер](http://thealexandrian.net/about) в ноябре 2015
 
-_Перевел Ангон в июле 2018_
+Перевел Ангон в июле 2018
 
-![](https://lh4.googleusercontent.com/DXfg6p9qlLS7pATglDsIjJ6hJDY7k_7cfJra3lFt_luieuEpdnFpqNKqVR9UJwuOr0JIxhByYlpNICPXZ8cpElNiMxyBSnEoN96xElKU4oYtxcRp3tc1HbLFWPu7WNy3HA2SNV2r)
+![](https://lh4.googleusercontent.com/DXfg6p9qlLS7pATglDsIjJ6hJDY7k7cfJra3lFtluieuEpdnFpqNKqVR9UJwuOr0JIxhByYlpNICPXZ8cpElNiMxyBSnEoN96xElKU4oYtxcRp3tc1HbLFWPu7WNy3HA2SNV2r)
 
 [](http://www.thealexandrian.net/images/20151118.jpg)
 
@@ -38,13 +38,13 @@ _Перевел Ангон в июле 2018_
 
 **Игрок:** Я снова пытаюсь взломать замок.
 
-Это пропускной пункт на пути к игромеханическому разрешению. Если у вас нет пропуска (то есть провал и не интересен, и не значим), то вам придется вернуться к диапазону произвола Ведущего и вспомнить о _согласии по умолчанию_.
+Это пропускной пункт на пути к игромеханическому разрешению. Если у вас нет пропуска (то есть провал и не интересен, и не значим), то вам придется вернуться к диапазону произвола Ведущего и вспомнить о согласии по умолчанию.
 
-(Столь же верно и то, что _успех_ должен быть интересным и/или значимым. Но обычно этот вопрос  решается сам собой, поскольку игроки едва ли будут предпринимать действия, в успешности которых они не заинтересованы.)
+(Столь же верно и то, что успех должен быть интересным и/или значимым. Но обычно этот вопрос  решается сам собой, поскольку игроки едва ли будут предпринимать действия, в успешности которых они не заинтересованы.)
 
 Ведущие часто допускают ошибку, считая что затрата ресурсов сама по себе значима. Например, время - это самый основной ресурс, который можно потратить. Так что они смотрят на вышеприведенный пример со взломом замка и полагают, что проваленные проверки были значимыми, поскольку они отняли у персонажа время. Однако это потерянное время становится по настоящему значимым только если имеет последствия (такие как появление блуждающих чудовищ (wandering monsters), приближение крайнего срока (deadline), дополнительное время на подготовку к бою у ждущих за дверью врагов и т.п.).
 
-Сам ход проверки действия, понятное дело, зависит от используемой вами игровой системы. Я не буду пытаться провести здесь полноценное исследование, но обычно такую проверку можно свести к _определению навыка_ (_identifying the skill_) и _установлению сложности_ (_setting a difficulty_).
+Сам ход проверки действия, понятное дело, зависит от используемой вами игровой системы. Я не буду пытаться провести здесь полноценное исследование, но обычно такую проверку можно свести к определению навыка (identifying the skill) и установлению сложности (setting a difficulty).
 
 ## Определение навыка
 
@@ -65,7 +65,7 @@ _Перевел Ангон в июле 2018_
 1. Посмотреть на перечень сложностей и назначить соответствующую или сопоставимую сложность.
 2. Начать со сложности “по умолчанию” и настроить ее, учтя  изменяющие ее факторы.
 
-С некоторыми системами лучше сочетается один из этих подходов. Например, системы D20 склоняются к назначаемой сложности и включают таблицы сложностей, в которых говорится что-нибудь вроде “Сложное задание (Hard task) имеет УС20 (DC 20)” или “Трудновыполнимое задание (Formidable task) имеет УС25”. С другой стороны, “Зов Ктулху” (_Call of Cthulhu_) склоняется к настраиваемой сложности, поскольку “по умолчанию” целевой показатель (target number) равен значению навыка персонажа, а Ведущий настраивает сложность, применяя к этому значению модификаторы.
+С некоторыми системами лучше сочетается один из этих подходов. Например, системы D20 склоняются к назначаемой сложности и включают таблицы сложностей, в которых говорится что-нибудь вроде “Сложное задание (Hard task) имеет УС20 (DC 20)” или “Трудновыполнимое задание (Formidable task) имеет УС25”. С другой стороны, “Зов Ктулху” (Call of Cthulhu) склоняется к настраиваемой сложности, поскольку “по умолчанию” целевой показатель (target number) равен значению навыка персонажа, а Ведущий настраивает сложность, применяя к этому значению модификаторы.
 
 Однако вне зависимости от используемой системы правил вы можете использовать любой из этих приемов. (И на деле скорее всего будете использовать и тот, и другой в сочетании.) Например, ведя игру по D&D, вы легко можете начать со сложности УС15 по умолчанию, а затем сказать “Поскольку идет дождь и скалы скользкие, стоит поднять УС до 18”.
 
@@ -73,7 +73,7 @@ _Перевел Ангон в июле 2018_
 
 Что касается сложности, я нахожу полезными три дополнительных показателя. Я буду говорить о них, используя терминологию Третьей Редакции D&D , поскольку первоначально я сформулировал эту идею в рамках данной системы. (Это может немного запутать играющих в Четвертую и Пятую Редакции, поскольку разработчики этих редакций приняли крайне странное решение относительно “пассивных” проверок, и описание игромеханики не соответствует математике этой игромеханики. Придется им смириться с этим, потому что я не собираюсь жонглировать битыми бутылками (jump through the broken hoops) неудачно разработанной игромеханики.)
 
-![D&D 3rd Edition - Player's Handbook](https://lh5.googleusercontent.com/Ly6jv9Iyvlm25rGzUNSkZ8tQW7-vrmwVpsGuf26e1vFQrAt_kjbQLL89kpmfEU07Tr0Gg9o6wbDzjqlV21ATWcgLFE2Vo-7s7falwjzD3Zqxcqfxhn6Em0i5vFd3mv2nOmo--7dC)
+![D&D 3rd Edition - Player's Handbook](https://lh5.googleusercontent.com/Ly6jv9Iyvlm25rGzUNSkZ8tQW7-vrmwVpsGuf26e1vFQrAtkjbQLL89kpmfEU07Tr0Gg9o6wbDzjqlV21ATWcgLFE2Vo-7s7falwjzD3Zqxcqfxhn6Em0i5vFd3mv2nOmo--7dC)
 
 [](http://www.amazon.com/exec/obidos/ASIN/0786928867/digitalcomi0a-20)
 
@@ -87,7 +87,7 @@ _Перевел Ангон в июле 2018_
 
 (Например, представьте, что в комнате что-то спрятано, и требуется проверка Обыска с УС25, чтобы это найти. Персонаж с Обыском +5 всегда найдет этот предмет, если у него будет достаточно времени, чтобы обшарить всю комнату. Персонаж с Обыском +15 найдет этот предмет после быстрого осмотра комнаты. А персонаж с Обыском +25 заметит этот предмет, просто зайдя в комнату.)
 
-Эти понятия вообще полезны для D&D (и других систем), поскольку ускоряют и упрощают разрешение действий. Но они могут быть особенно полезны при установлении сложности. Оцените, насколько умелым должен быть человек, совершающий такие действия, а потом _используйте его для сопоставления_.
+Эти понятия вообще полезны для D&D (и других систем), поскольку ускоряют и упрощают разрешение действий. Но они могут быть особенно полезны при установлении сложности. Оцените, насколько умелым должен быть человек, совершающий такие действия, а потом используйте его для сопоставления.
 
 Например, я сделал такие таблицы для Третьей Редакции D&D:
 
@@ -101,24 +101,24 @@ _Перевел Ангон в июле 2018_
 
 **Подготовка для взятия 10:** Спросите себя: “Насколько подготовленным нужно быть, чтобы успешно выполнять это задание в рабочем порядке (as a matter of routine)?” Найдите этот уровень подготовки в таблице №1, а затем прибавьте 10, чтобы определить УС проверки (что сделано в таблице №2).
 
-_Пример: даже кто-нибудь не обучавшийся гончарному делу в состоянии сделать простую и грубую миску, если показать ему, как работает оборудование, так что изготовление подобной миски должно требовать проверки с УС10 (0+10=10). С другой стороны,  для того, чтобы выполнить сальто назад, необходима некоторая подготовка, так что это может потребовать проверки с УС12 (2+10=12)._
+Пример: даже кто-нибудь не обучавшийся гончарному делу в состоянии сделать простую и грубую миску, если показать ему, как работает оборудование, так что изготовление подобной миски должно требовать проверки с УС10 (0+10=10). С другой стороны,  для того, чтобы выполнить сальто назад, необходима некоторая подготовка, так что это может потребовать проверки с УС12 (2+10=12).
 
 **Подготовка для взятия 20:** Когда имеешь дело с особенно сложными заданиями, вопрос должен звучать как “Какой уровень подготовки необходим, чтобы у человека был хоть какой-то шанс преуспеть в выполнении этой задачи?” Найдите этот уровень подготовки в таблице №1, а затем прибавьте 20 для определения УС задания.
 
-_Пример: простой человек не может просто взять скрепку и взломать обычный замок. Необходима подготовка. Так что взлом обычного замка должен быть проверкой с УС25 (5+20=25)._
+Пример: простой человек не может просто взять скрепку и взломать обычный замок. Необходима подготовка. Так что взлом обычного замка должен быть проверкой с УС25 (5+20=25).
 
-Даже если вы не вычисляете это в уме во время игры, такие вычисления все равно могут способствовать лучшему пониманию того, что на самом деле _означают_ в новой для вас системе различные показатели сложности. (На мой взгляд, этот прием особенно полезен, если вы пытаетесь выверить параметры сложности для персонажей, способности которых находятся за пределами человеческих.)
+Даже если вы не вычисляете это в уме во время игры, такие вычисления все равно могут способствовать лучшему пониманию того, что на самом деле означают в новой для вас системе различные показатели сложности. (На мой взгляд, этот прием особенно полезен, если вы пытаетесь выверить параметры сложности для персонажей, способности которых находятся за пределами человеческих.)
 
 Но не сопоставляйте персонажей самих с собой! Если вы устанавливаете сложность, глядя на характеристики предпринимающего действие персонажа, а потом вычисляя нужную вам вероятность успеха, то это окажет пагубное воздействие на игру. Это может казаться хорошей идеей, поскольку таким образом вы оцениваете, какой вызов будет  “подходящим” для персонажа, но в конечном итоге от этого прежде всего полностью теряется смысл самого наличия игромеханики.
 
-![Infinity - Modiphius Entertainment](https://lh5.googleusercontent.com/TiUGl2QAFRF_115KlVn8Ux4gVoEpKzI8v8PTd3mwsKnhn3fhtoXW5yO-gGi7COr4MxsuXXBZWQHbFQDQIp5DPnphSqguc5KvpaQUHdR75mLsFtVXZELId1ShewzPalZSV3XZ8oet)
+![Infinity - Modiphius Entertainment](https://lh5.googleusercontent.com/TiUGl2QAFRF115KlVn8Ux4gVoEpKzI8v8PTd3mwsKnhn3fhtoXW5yO-gGi7COr4MxsuXXBZWQHbFQDQIp5DPnphSqguc5KvpaQUHdR75mLsFtVXZELId1ShewzPalZSV3XZ8oet)
 
-[](http://www.drivethrurpg.com/product/159673/INFINITY-RPG-FREE-Quickstart?affiliate_id=81207)
+[](http://www.drivethrurpg.com/product/159673/INFINITY-RPG-FREE-Quickstart?affiliateid=81207)
 
-Некоторые системы правил, такие как D&D или [Нуменера](http://ru.rpg.wikia.com/wiki/Numenera) ([_Numenera_](http://rpg.drivethrustuff.com/product/114133/Numenera?affiliate_id=81207)) легко поддаются такого рода анализу. Однако другие системы могут сбивать анализирующего их с толку. Особенно это верно в отношении систем, использующих “[горсти кубиков](http://ru.rpg.wikia.com/wiki/%D0%94%D0%B0%D0%B9%D1%81%D0%BF%D1%83%D0%BB)” (dice pool). Например, в использующейся в [_Infinity_ RPG](http://www.drivethrurpg.com/product/159673/INFINITY-RPG-FREE-Quickstart?affiliate_id=81207) системе 2к20 (2d20 System) в основном применяется “горсть кубов” из двух двадцатигранников, которая различными игромеханическими способами может увеличиваться вплоть до максимально возможной горсти в 5к20. Игрок пытается выкинуть на каждом кубике значение, меньшее или равное целевому показателю, зависящему от уровня навыка персонажа, а сложность задания оценивается в количестве успехов, которые нужно выкинуть. Вне зависимости от навыка вашего персонажа, у него нет минимальной гарантии успеха. А вспомогательная игромеханика разработана так, что и максимальный теоретически достижимый успех ничем не ограничен.
+Некоторые системы правил, такие как D&D или [Нуменера](http://ru.rpg.wikia.com/wiki/Numenera) ([Numenera](http://rpg.drivethrustuff.com/product/114133/Numenera?affiliateid=81207)) легко поддаются такого рода анализу. Однако другие системы могут сбивать анализирующего их с толку. Особенно это верно в отношении систем, использующих “[горсти кубиков](http://ru.rpg.wikia.com/wiki/%D0%94%D0%B0%D0%B9%D1%81%D0%BF%D1%83%D0%BB)” (dice pool). Например, в использующейся в [Infinity RPG](http://www.drivethrurpg.com/product/159673/INFINITY-RPG-FREE-Quickstart?affiliateid=81207) системе 2к20 (2d20 System) в основном применяется “горсть кубов” из двух двадцатигранников, которая различными игромеханическими способами может увеличиваться вплоть до максимально возможной горсти в 5к20. Игрок пытается выкинуть на каждом кубике значение, меньшее или равное целевому показателю, зависящему от уровня навыка персонажа, а сложность задания оценивается в количестве успехов, которые нужно выкинуть. Вне зависимости от навыка вашего персонажа, у него нет минимальной гарантии успеха. А вспомогательная игромеханика разработана так, что и максимальный теоретически достижимый успех ничем не ограничен.
 
 Вы, конечно, можете углубиться в математические расчеты и вывести осмысленные рекомендации для систем с горстями кубов вроде этой, но вообще вам лучше бы принять их природу и использовать для установления сложности способ “настройки от умолчания” (adjust-from-default).
 
-На самом деле, система 2к20 во многом обходит этот вопрос, поскольку не полагается на Ведущего в установлении уровня сложности. Как минимум в 95% случаев Ведущий просто решает, является ли сложность задачи Средней (Average) (1) или Испытывающей (Challenging) (2). (Уровни сложности 3, 4 и 5 тоже существуют, но применяются крайне редко.) Это связано с тем, что в системе намного меньше внимания обращается на простую дихотомию успеха или провала проверки. Вместо этого, внимание сосредоточено на _величине успеха_ (_margin of success_) персонажа.
+На самом деле, система 2к20 во многом обходит этот вопрос, поскольку не полагается на Ведущего в установлении уровня сложности. Как минимум в 95% случаев Ведущий просто решает, является ли сложность задачи Средней (Average) (1) или Испытывающей (Challenging) (2). (Уровни сложности 3, 4 и 5 тоже существуют, но применяются крайне редко.) Это связано с тем, что в системе намного меньше внимания обращается на простую дихотомию успеха или провала проверки. Вместо этого, внимание сосредоточено на величине успеха (margin of success) персонажа.
 
 И именно об этом мы будем говорить в следующей главе.
