--- a/src/content/posts/translations/alexandrian-art-of-rulings-5.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-5.mdx
@@ -92,12 +92,31 @@ translator: Angon
 Например, я сделал такие таблицы для Третьей Редакции D&D:
 
 **Таблица №1: Профессиональность (SKILLED PROFESSIONALS)**
-
-<table class="wp-block-table"><tbody><tr><td><strong>Бонус Навыка (Skill Bonus)</strong></td><td><strong>Уровень подготовки &nbsp;(Level of Training)</strong></td></tr><tr><td>-1 или хуже</td><td>Бездарный (Untalented)</td></tr><tr><td>+0</td><td>Необученный (Untrained)</td></tr><tr><td>+1</td><td>Знающий азы (Basic Training)</td></tr><tr><td>+5</td><td>Ученик (Apprentice)</td></tr><tr><td>+10</td><td>Профессионал (Professional)</td></tr><tr><td>+15</td><td>Мастер (Master)</td></tr><tr><td>+20</td><td>Великий мастер (Grand Master)</td></tr><tr><td>+25</td><td>Легендарный мастер (Mythic Mastery)</td></tr></tbody></table>
+| Бонус Навыка (Skill Bonus) | Уровень подготовки  (Level of Training) |
+|----------------------------|-----------------------------------------|
+| -1 или хуже                | Бездарный (Untalented)                  |
+| 0                          | Необученный (Untrained)                 |
+| 1                          | Знающий азы (Basic Training)            |
+| 5                          | Ученик (Apprentice)                     |
+| 10                         | Профессионал (Professional)             |
+| 15                         | Мастер (Master)                         |
+| 20                         | Великий мастер (Grand Master)           |
+| 25                         | Легендарный мастер (Mythic Mastery)     |
 
 **Таблица №2: Типичный Уровень Сложности (GENERIC DIFFICULTY CLASS)**
 
-<table class="wp-block-table"><tbody><tr><td><strong>УС</strong><strong><br></strong><strong>(DC)</strong></td><td><strong>Задание</strong><strong><br></strong><strong>(Task)</strong></td><td><strong>Подготовка для взятия 10 (Take 10 Training)</strong></td><td><strong>Подготовка для взятия 20</strong><strong><br></strong><strong>(Take 20 Training)</strong></td></tr><tr><td>0</td><td>Очень простое (Very Easy)</td><td>Необученный</td><td>Необученный</td></tr><tr><td>5</td><td>Простое (Easy)</td><td>Необученный</td><td>Необученный</td></tr><tr><td>10</td><td>Обычное (Average)</td><td>Необученный</td><td>Необученный</td></tr><tr><td>15</td><td>Непростое (Tough)</td><td>Ученик</td><td>Необученный</td></tr><tr><td>20</td><td>Испытывающее (Challenging)</td><td>Профессионал</td><td>Необученный</td></tr><tr><td>25</td><td>Трудновыполнимое (Formidable)</td><td>Мастер</td><td>Ученик</td></tr><tr><td>30</td><td>Эпическое (Heroic)</td><td>Великий мастер</td><td>Профессионал</td></tr><tr><td>35</td><td>Неимоверное (Incredible)</td><td>Легендарный мастер</td><td>Мастер</td></tr><tr><td>40</td><td>Почти невыполнимое (Nearly Impossible)</td><td>Легендарный мастер</td><td>Великий мастер</td></tr></tbody></table>
+| УС   | Задание                                | Подготовка для взятия 10 (Take 10 Training) | Подготовка для взятия 20 |
+|------|----------------------------------------|---------------------------------------------|--------------------------|
+| (DC) | (Task)                                 |                                             | (Take 20 Training)       |
+| 0    | Очень простое (Very Easy)              | Необученный                                 | Необученный              |
+| 5    | Простое (Easy)                         | Необученный                                 | Необученный              |
+| 10   | Обычное (Average)                      | Необученный                                 | Необученный              |
+| 15   | Непростое (Tough)                      | Ученик                                      | Необученный              |
+| 20   | Испытывающее (Challenging)             | Профессионал                                | Необученный              |
+| 25   | Трудновыполнимое (Formidable)          | Мастер                                      | Ученик                   |
+| 30   | Эпическое (Heroic)                     | Великий мастер                              | Профессионал             |
+| 35   | Неимоверное (Incredible)               | Легендарный мастер                          | Мастер                   |
+| 40   | Почти невыполнимое (Nearly Impossible) | Легендарный мастер                          | Великий мастер           |
 
 **Подготовка для взятия 10:** Спросите себя: “Насколько подготовленным нужно быть, чтобы успешно выполнять это задание в рабочем порядке (as a matter of routine)?” Найдите этот уровень подготовки в таблице №1, а затем прибавьте 10, чтобы определить УС проверки (что сделано в таблице №2).
 
